--- a/中断/中断.md
+++ b/中断/中断.md
@@ -78,6 +78,7 @@ common_interrupt:
 irq_desc数组中的元素是irq_desc_t中断描述符，每一个中断号具有一个描述符，使用action链表连接共享同一个中断号的多个设备和中断。handler points to the hw_interrupt_type descriptor that identifies the PIC circuit servicing the IRQ line。handler指向发出这个中断的设备的处理对象hw_irq_controller,比如在单CPU，这个对象一般就是处理芯片8259的对象。为什么要指向这个对象呢？因为当发生中断的时候，内核需要对相应的中断进行一些处理，比如屏蔽这个中断等。这个时候需要对中断设备(比如8259芯片)进行操作，于是可以通过这个指针指向的对象进行操作。  
 irqaction描述符，涉及一个特定的硬件设备和一个特定的中断。handler指向一个I/O设备的中断服务例程(这个handler是irqaction中的),name设备名，dev_id标志设备本身，next指向描述符链表的下一个元素。  
 在激活一个准备利用irq线的设备之前其相应的驱动程序调用request_irq()注册中断处理程序。这个函数建立一个新的irqaction描述符，并用参数值初始化它。然后调用setup_irq()函数把这个描述符插入到适合的IRQ链表。如果setup_irq()返回一个出错码，设备驱动程序中止操作，这意味着IRQ线已有另一个设备所使用，而这个设备不允许中断共享。当设备操作结束时，驱动程序调用free_irq()函数从IRQ链表中删除这个描述符，并释放相应的内存区。  
+#### do_IRQ()
 unsigned int do_IRQ(struct pt_regs regs)通过pt_regs结构可以找到中断号，然后对接收到的中断进行应答irq_desc[irq].handler->ack(irq)，禁止这条线上的中断传递。接下来，do_IRQ() ensures that a valid handler is registered on the line and that it is enabled and not currently executing.如果是这样的，do_IRQ就调用handle_IRQ_event()来运行为这条中断线所安装的中断处理程序。  
 handle_IRQ_event(),First,because the processor disabled interrupts,they are turned back on unless IRQ_DISABLED was specified during the handler’s registration.Next,each potential handler is executed in a loop.Finally,interrupts are again disable and the function returns.  
 Back in do_IRQ(),the funcion cleans up and returns to the initial entry point通过irq_desc[irq].handler->end(irq),which then jumps to ret_from_intr().  
@@ -97,4 +98,33 @@ irqreturn_t handler_IRQ_event(unsigned int irq,struct pt_regs regs,struct irqact
 	}while(action);
 	local_irq_disable();
 }
+```
+#### 时钟中断  
+在内核初始化期间time_init()函数被调用来建立计时体系结构，它通常执行如下操作：  
+```
+1.初始化xtime变量。利用get_cmos_time()函数从实时时钟RTC中读取自1970年1月1日（UTC）午夜以来经历的秒数。
+2.初始化wall_to_monotonic变量。这个变量和xtime一样是timespec类型，只不过它存放将被加到xtime上的秒数和纳秒数，以此来获得单向的时间流。
+3.如果内核支持HPET，它将调用hpet_enable()函数确认ACPI固件是否探测到该芯片并将它的寄存器映射到了内存地址空间中。
+4.调用select_timer()来挑选系统中可利用的最好的定时器资源，并设置cur_timer变量指向该定时器资源对应的定时器对象的地址。
+5.调用setup_irq(0,&irq0)来创建与IRQ0相应的中断门，IRQ0引脚连接着系统时钟中断源（PIT或HPET）
+```
+时钟中断处理函数的注册  
+![时钟中断处理函数的注册](4.jpg)  
+时钟中断处理函数的调用
+时钟中断处理函数可以划分为两个部分：体系结构相关部分和体系结构无关部分。
+```
+与体系结构相关的例程作为系统定时器的中断处理程序time_interrupt而注册到内核中，以便在产生时钟中断时，它都能够相应地运行。这部分处理程序主要完成：
+*获得xtime_lock锁，以便对访问jiffies_64和墙上时间xtime进行保护
+*需要时应答或重新设置系统时钟
+*周期性地使用墙上时间更新实时时钟
+*调用体系结构无关的时钟例程：tick_periodic()
+中断服务程序主要通过调用与体系结构无关的例程tick_periodic执行下面的工作：
+*给jiffies_64变量增加1
+*更新资源消耗的统计值，比如当前进程所消耗的系统时间和用户时间
+*执行已经到期的动态定时器
+*执行scheduler_tick()函数
+*更新墙上时间，该时间存放在xtime变量中
+*计算平均负载
+很多重要的操作是在do_timer和updata_process_times中进行。前者承担着对jiffies_64的实际增加操作，后者更新进程消耗的各种节拍数。
+tick_periodic()执行完毕后，返回与体系结构相关的中断处理程序，继续执行后面的工作，释放xtime_lock锁，然后退出。
 ```
