--- a/中断/中断.md
+++ b/中断/中断.md
@@ -108,10 +108,10 @@ irqreturn_t handler_IRQ_event(unsigned int irq,struct pt_regs regs,struct irqact
 4.调用select_timer()来挑选系统中可利用的最好的定时器资源，并设置cur_timer变量指向该定时器资源对应的定时器对象的地址。
 5.调用setup_irq(0,&irq0)来创建与IRQ0相应的中断门，IRQ0引脚连接着系统时钟中断源（PIT或HPET）
 ```
-时钟中断处理函数的注册  
+##### 时钟中断处理函数的注册  
 ![时钟中断处理函数的注册](4.jpg)  
-时钟中断处理函数的调用
-时钟中断处理函数可以划分为两个部分：体系结构相关部分和体系结构无关部分。
+##### 时钟中断处理函数的调用  
+时钟中断处理函数可以划分为两个部分：体系结构相关部分和体系结构无关部分。  
 ```
 与体系结构相关的例程作为系统定时器的中断处理程序time_interrupt而注册到内核中，以便在产生时钟中断时，它都能够相应地运行。这部分处理程序主要完成：
 *获得xtime_lock锁，以便对访问jiffies_64和墙上时间xtime进行保护
